Implement Task T005: Security Testing Suite
Complete security testing infrastructure with comprehensive
vulnerability validation and attack prevention testing.

## Security Test Implementation

### Core Security Test Files (7 files, ~2,500 lines)
- **tests/security/conftest.py** (212 lines): Security fixtures with malicious payloads
- **tests/security/test_input_validation.py** (542 lines): Input validation against injection attacks
- **tests/security/test_path_traversal.py** (608 lines): Path traversal prevention testing
- **tests/security/test_command_injection.py** (584 lines): Command injection prevention testing
- **tests/security/test_*_simple.py** (3 files, 854 lines): Simplified realistic security tests

### Security Test Coverage

#### Input Validation Security
- Project name validation against injection attacks
- Author name validation against script injection
- Description validation against XSS and template injection
- Template variable validation against SSTI attacks
- Path input validation against traversal attacks
- URL validation against malformed and malicious URLs
- Version validation against format string attacks

#### Path Traversal Prevention
- Directory traversal attack prevention (../, ../../)
- Absolute path injection prevention (/etc/, C:\Windows\)
- Symlink attack prevention and detection
- UNC path injection prevention (Windows)
- Path normalization bypass prevention
- Template file path security validation
- Output directory restriction enforcement

#### Command Injection Prevention
- Git command injection prevention
- Virtual environment command validation
- Shell metacharacter filtering (; && || |)
- Command substitution prevention (`command`, $(command))
- Environment variable injection prevention
- Subprocess argument validation
- Post-generation command security

### Security Testing Infrastructure

#### Malicious Payload Generators
- 50+ malicious project names (traversal, injection, script attacks)
- 40+ malicious file paths (encod

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,9 @@ markers = [
     "gui: mark test as a GUI test",
     "automation: mark test as an automation test",
     "workflow: mark test as a workflow test",
+    "security: mark test as a security test",
+    "injection: mark test as an injection attack test",
+    "traversal: mark test as a path traversal test",
 ]
 addopts = [
     "--strict-markers",
